--- a/links/style.css
+++ b/links/style.css
@@ -12,7 +12,7 @@ body {
   position: relative;
 }
 
-/* 🌈 Glowing animated background */
+/*  Glowing animated background */
 .animated-glow {
   position: absolute;
   width: 1000px;
